--- a/entry/index.html
+++ b/entry/index.html
@@ -4,6 +4,10 @@
     <title>Connect Four</title>
   </head>
   <body>
+    <div class="actions">
+      <a class="action new" href="/">New</a>
+      <a class="action join" href="">Join</a>
+      <a class="action watch" href="">Watch</a>
     <div class="board"></div>
     <script src="main.js" type="module"></script>
   </body>
